--- a/custom-transactional.hbs
+++ b/custom-transactional.hbs
@@ -15,19 +15,18 @@
 		.container {
 			background: white;
 			padding: 20px 40px;
-			margin: 40px;
+			margin: 40px auto;
 			box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 			width: 80% !important;
-			margin:auto;
 		}
 
 		h1 {
-			font-family: 'ProductSans-Regular' !important;
+			font-family: 'ProductSans-Regular', sans-serif !important;
 		}
 
 		a,
 		p {
-			font-family: 'TTNormsPro-Medium' !important;
+			font-family: 'soleil', sans-serif !important;
 		}
 	</style>
 </head>
