--- a/series.hbs
+++ b/series.hbs
@@ -16,12 +16,12 @@
 					</div>
 				</div>
 				<!-- end sorting widget -->
-				<div class="sorted-series">
+				<main class="sorted-series">
 						{{> cover-tag}}
 						{{#foreach posts}}
 							{{> seriespreview}}
 						{{/foreach}}
-				</div>
+				</main>
 			</div>
 		</div>
 	</div>
