--- a/src/less/author/githubcard.less
+++ b/src/less/author/githubcard.less
@@ -53,7 +53,7 @@
 
     li {
       display: inline-block;
-      font-family: 'TTNormsPro-Medium', '';
+      font-family: 'soleil', sans-serif;
       color: #444;
       font-size: 1.1em;
       border: 0;
@@ -98,8 +98,7 @@
     padding: 5px 8px;
     color: #444;
     font-size: 0.8em;
-    border: 1px solid;
-    border-color: #BBB;
+    border: 1px solid #BBB;
     border-radius: 2px;
     height: 11px;
     line-height: 1;
@@ -149,7 +148,7 @@
       padding: 15px 0 0;
       height: fit-content;
       text-transform: uppercase;
-      font-family: 'TTNormsPro-Medium', sans-serif;
+      font-family: 'soleil', sans-serif;
     }
 
     a {
@@ -159,7 +158,6 @@
       font-size: 0.9em;
       border-top: 0;
       width: auto;
-      transition: 0.2s all ease-out;
       background-color: #f7f7fb;
       padding: 10px 16px;
       transition: 0.2s all ease-out;
@@ -186,7 +184,7 @@
       max-width: 280px;
       text-overflow: ellipsis;
       color: @theme-color;
-      font-family: TTNormsPro-Medium;
+      font-family: soleil, sans-serif;
       font-size: 1em;
     }
 
@@ -213,19 +211,7 @@
       }
     }
   }
-  /*
-& {
-  width: 280px;
-  border-radius: 5px;
-  font-size: 16px;
-  font-family: Helvetica;
-  background: #FAFAFA;
-  border-width: 1px 1px 2px;
-  border-style: solid;
-  border-color: #DDD;
-  overflow: hidden;
-}
-*/
+
   a {
     text-decoration: none;
 
@@ -237,10 +223,9 @@
   .name {
     display: block;
     font-size: 1.2em;
-    /* font-weight: bold; */
     color: #222;
     text-transform: uppercase;
-    font-family: 'TTNormsPro-Medium', sans-serif;
+    font-family: 'soleil', sans-serif;
   }
 
   .error {
