--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -5,7 +5,7 @@
 ====================================================*/
 body,
 html {
-	font-family: 'TTNormsPro-Regular', sans-serif;
+	font-family: 'soleil', sans-serif;
 	font-size: 16px;
 	color: @text-color;
 	line-height: 1.75em;
@@ -21,8 +21,7 @@ article {
 	p {
 		line-height: 1.7em;
 		font-size: 16px;
-		font-display: block;
-		font-family: 'TTNormsPro-Regular';
+		font-family: 'soleil', sans-serif;
 	}
 }
 
@@ -32,12 +31,12 @@ section {
 }
 
 strong {
-	font-family: 'TTNormsPro-Medium';
-	font-weight: 100;
+	font-family: 'soleil', sans-serif;
+	font-weight: 600;
 }
 
 a {
-	font-family: 'TTNormsPro-Regular';
+	font-family: 'soleil', sans-serif;
 
 	&:hover {
 		cursor: pointer;
@@ -46,12 +45,10 @@ a {
 
 .h1,
 h1 {
-	color: @h1-color;
-	font-family: 'ProductSans-Bold', 'TTNormsPro-Medium', 'TTNormsPro-Medium', sans-serif;
+	font-family: 'ProductSans-Bold', 'soleil', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
-	font-display: block;
 }
 
 h1,
@@ -59,23 +56,21 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'ProductSans-Medium', 'TTNormsPro-Medium', 'TTNormsPro-Medium', serif;
+	font-family: 'ProductSans-Medium', 'soleil', 'soleil', serif;
 	font-weight: 700;
 	color: @header-color;
-	font-display: block;
 }
 
 h3 {
-	font-family: 'TTNormsPro-Medium', serif;
+	font-family: 'soleil', serif;
 	font-weight: 700;
 	color: @header-color;
-	font-display: block;
 }
 
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'TTNormsPro-Medium', 'TTNormsPro-Medium';
+	font-family: 'soleil';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -95,7 +90,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'TTNormsPro-Medium', serif;
+	font-family: 'soleil', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
@@ -142,7 +137,6 @@ input[type="url"],
 input[type="email"],
 input[type="password"] textarea {
 	padding: 7px;
-	border: 1px solid @border-color;
 	.transition(all 0.2s);
 
 	&:focus {
