--- a/src/less/global/nav.less
+++ b/src/less/global/nav.less
@@ -137,13 +137,13 @@ nav {
       color: white;
       padding-left: 20px;
       font-size: 1em;
-      font-family: TTNormsPro-Regular;
+      font-family: soleil, sans-serif;
     }
   }
 
   #my-custom-results {
     font-size: 1em;
-    font-family: 'TTNormsPro-Medium',sans-serif!important;
+    font-family: 'soleil', sans-serif!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -292,7 +292,7 @@ nav {
       }
 
       a {
-        font-family: 'ProductSans-Regular';
+        font-family: 'ProductSans-Regular', sans-serif;
         font-size: 0.9em;
         text-transform: uppercase;
         transform: scale(1);
@@ -312,7 +312,7 @@ nav {
     width: 226px;
     position: absolute;
     font-size: 1em;
-    font-family: 'TTNormsPro-Medium',sans-serif!important;
+    font-family: 'soleil', sans-serif!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -337,7 +337,7 @@ nav {
 
       a {
         font-size: 0.8em;
-        font-family: TTNormsPro-Medium;
+        font-family: soleil, sans-serif;
       }
 
       &:nth-child(even) {
@@ -477,7 +477,7 @@ nav {
     }
 
     a {
-      font-family: 'ProductSans-Regular';
+      font-family: 'ProductSans-Regular', sans-serif;
       font-size: 0.85em;
       text-transform: uppercase;
       color: #515b65;
@@ -506,7 +506,7 @@ nav {
   width: 226px;
   position: absolute;
   font-size: 1em;
-  font-family: 'TTNormsPro-Medium',sans-serif!important;
+  font-family: 'soleil',sans-serif!important;
   font-weight: 200;
   transition: 0.3s all;
   outline: none;
@@ -531,7 +531,7 @@ nav {
 
     a {
       font-size: 0.8em;
-      font-family: TTNormsPro-Medium;
+      font-family: soleil, sans-serif;
     }
 
     &:nth-child(even) {
@@ -646,7 +646,6 @@ nav {
   }
 
   .menu {
-    /*idth: 300px;*/
     width: 280px;
     float: right;
     display: flex;
@@ -835,13 +834,13 @@ nav {
       color: white;
       padding-left: 20px;
       font-size: 1em;
-      font-family: TTNormsPro-Regular;
+      font-family: soleil;
     }
   }
 
   #my-custom-results {
     font-size: 1em;
-    font-family: 'TTNormsPro-Medium',sans-serif!important;
+    font-family: 'soleil',sans-serif!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -1013,7 +1012,7 @@ nav {
     width: 226px;
     position: absolute;
     font-size: 1em;
-    font-family: 'TTNormsPro-Medium',sans-serif!important;
+    font-family: 'soleil',sans-serif!important;
     font-weight: 200;
     transition: 0.3s all;
     outline: none;
@@ -1038,7 +1037,7 @@ nav {
 
       a {
         font-size: 0.8em;
-        font-family: TTNormsPro-Medium;
+        font-family: soleil;
       }
 
       &:nth-child(even) {
