--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -21,10 +21,10 @@
 			font-size: 0.8em !important;
 			-webkit-transition: all 0.2s ease;
 			-moz-transition: all 0.2s ease;
-			-ms-transition: all 0.2s ease;
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
-			font-family: 'TTNormsPro-Light',sans-serif;
+			font-family: 'soleil',sans-serif;
+			font-weight: 300;
 			flex-grow: 1;
 			text-align: center;
 			transition: all 0.2s ease;
@@ -69,7 +69,8 @@
 		&.text {
 			p {
 				font-size: 15px;
-		    font-family: 'TTNormsPro-Light', sans-serif;
+		    font-family: 'soleil', sans-serif;
+				font-weight: 300;
 		    line-height: 1.6;
 			}
 		}
@@ -79,8 +80,6 @@
 			display: flex;
 			margin: 0 !important;
 			height: 35px;
-			margin: auto;
-			display: flex;
 			justify-content: space-between;
 
 			.btn {
@@ -145,20 +144,15 @@
 
 			input[type="text"],
 			input[type="email"] {
-				font-weight: 100;
 				border: 1px solid #d5dbe6 !important;
-				transition: all 0.3s all;
 				width: -webkit-fill-available;
 				width: -moz-fill-available;
-				margin-bottom: 0;
 				padding: 14px 15px;
-				border: 0;
 				border-radius: 3px;
 				background: #fff;
 				font-size: 13px;
-				font-weight: 200;
 				letter-spacing: 1px;
-				font-weight: 100;
+				font-weight: 300;
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
 				margin-bottom: 10px;
@@ -272,7 +266,7 @@
 				margin: 15px 0 20px;
 				font-size: 0.9em;
 				line-height: 1.5;
-				font-family: 'TTNormsPro-Regular', sans-serif;
+				font-family: 'soleil', sans-serif;
 			}
 
 
@@ -291,10 +285,8 @@
 			margin-bottom: 0;
 			padding: 0;
 			overflow: hidden;
-			display: inline-block;
 			align-items: center;
 			display: flex;
-			height: 60px;
 
 			&:last-of-type {
 				border-bottom: 0;
@@ -364,7 +356,7 @@
 			letter-spacing: 0;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'TTNormsPro-Regular',sans-serif;
+			font-family: 'soleil',sans-serif;
 			display: flex;
 			align-items: center;
 
@@ -465,7 +457,6 @@
 			opacity: 0.7;
 			margin: 0;
 			white-space: inherit;
-			display: inline-block;
 			line-height: 1.5;
 			width: auto;
 			padding-right: 10px;
@@ -479,7 +470,7 @@
 			line-height: 1.2;
 			font-size: 15px;
 			margin: 0;
-			font-family: 'TTNormsPro-Regular', sans-serif;
+			font-family: 'soleil', sans-serif;
 			display: inline-block;
 
 			&:hover {
@@ -495,7 +486,7 @@
 			margin-bottom: 15px;
 			letter-spacing: 1px;
 			margin-top: 0;
-			font-family: 'TTNormsPro-Medium',serif;
+			font-family: 'soleil',serif;
 			@media(max-width: 1040px) {
 				font-size: 1.3em !important;
 			}
@@ -506,7 +497,7 @@
 			font-size: 0.9em;
 			line-height: 1.7;
 			padding-right: 0;
-			font-family: 'TTNormsPro-Regular', sans-serif;
+			font-family: 'soleil', sans-serif;
 		}
 	}
 
@@ -517,7 +508,7 @@
 		.post-title {
 			a {
 				color: #208cad;
-				font-family: 'TTNormsPro-Regular',sans-serif;
+				font-family: 'soleil',sans-serif;
 				transition: all 0.2s ease;
 
 				&:hover {
@@ -531,7 +522,7 @@
 			margin-bottom: 10px;
 			text-transform: uppercase;
 			font-size: 1.2em;
-			font-family: 'ProductSans-Medium', TTNormsPro-Medium, serif;
+			font-family: 'ProductSans-Medium', soleil, serif;
 			color: @header-color;
 			font-weight: 500;
 		}
@@ -542,7 +533,7 @@
 			font-weight: 500;
 			margin-bottom: 8px;
 			text-transform: uppercase;
-			font-family: 'TTNormsPro-Medium',TTNormsPro-Medium,serif;
+			font-family: 'soleil',soleil,serif;
 			letter-spacing: 1px;
 			color: #1f5373;
 			margin-top: 0;
@@ -600,17 +591,16 @@
 			.recent-single-post,
 			.single-author {
 				border-bottom: 1px solid #d5dde8;
-				padding-bottom: 17px;
 				margin-bottom: 17px;
 				line-height: 1.35;
 				padding: 0 0 10px;
-				font-family: 'TTNormsPro-Medium' ,sans-serif;
+				font-family: 'soleil' ,sans-serif;
 
 				.post-title,
 				.single-author-name {
-					font-family: 'TTNormsPro-Regular', sans-serif;
-			    transition: all 0.2s ease;
-			    line-height: 1.2;
+					font-family: 'soleil', sans-serif;
+					transition: all 0.2s ease;
+					line-height: 1.2;
 					.transition(all 0.2s ease);
 					@media(max-width: 600px) {
 						text-align: left;
@@ -627,7 +617,7 @@
 					font-size: 13px;
 					opacity: 1;
 					margin-top: 5px;
-					font-family: 'TTNormsPro-Regular', sans-serif;
+					font-family: 'soleil', sans-serif;
 
 					i {
 						margin-right: 5px;
@@ -678,7 +668,7 @@
 			p {
 				margin-bottom: 10px;
 				font-size: 16px;
-				font-family: 'TTNormsPro-Medium',sans-serif;
+				font-family: 'soleil',sans-serif;
 			}
 		}
 	}
