--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -6,6 +6,7 @@
   transition: all 0.3s ease-out;
   position: relative;
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
+
   @media(max-width: 600px) {
     margin: 5px 20px;
     width: 100%;
@@ -59,7 +60,7 @@
     font-size: 1.1em !important;
     margin-top: 0 !important;
     min-height: 69px;
-    font-family: 'ProductSans-Medium';
+    font-family: 'ProductSans-Medium', sans-serif;
     @media(max-width: 600px) {
       font-size: 1.1em !important;
     }
@@ -88,7 +89,7 @@
       position: relative;
 
       span {
-        font-family: 'TTNormsPro-Medium','TTNormsPro-Medium', '' !important;
+        font-family: 'soleil', sans-serif !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
@@ -111,7 +112,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'TTNormsPro-Medium','TTNormsPro-Medium';
+      font-family: 'soleil', sans-serif;
       color: #224a69;
     }
     @media (max-width: 600px) {
