--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -74,7 +74,7 @@ blockquote pre {
     border-radius: 2px;
     font-size: 0.8em;
     font-weight: 400;
-    font-family: 'Hack';
+    font-family: 'Hack', sans-serif;
     white-space: nowrap;
   }
 
@@ -152,7 +152,6 @@ blockquote pre {
     overflow-x: hidden;
     background: #262633;
     color: #d3dce0;
-    font-family: dm;
     font-weight: 200;
     line-height: 1.5;
     white-space: pre-wrap;
