--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -45,7 +45,7 @@
       opacity: 0.7;
       counter-increment: li -1;
       color: #597d87;
-      font-family: 'TTNormsPro-Regular';
+      font-family: 'soleil';
       font-size: 0.85em;
       padding-left: 8px;
       line-height: 1;
@@ -71,7 +71,7 @@
       &::before {
         content: "Part " counter(li, upper-roman) "." !important;
         color: #597d87;
-        font-family: 'TTNormsPro-Medium' !important;
+        font-family: 'soleil', sans-serif !important;
         margin-right: 8px;
         font-size: 13px;
         @media(max-width: 600px) {
@@ -85,7 +85,7 @@
       a {
         color: #597d87;
         @media(max-width: 600px) {
-          font-family: 'TTNormsPro-Regular';
+          font-family: 'soleil', sans-serif;
           font-size: 0.9em;
         }
       }
@@ -95,16 +95,16 @@
   .currentPost {
     opacity: 1 !important;
     margin-left: 0;
-    font-family: 'TTNormsPro-Medium' !important;
+    font-family: 'soleil', sans-serif !important;
 
     * {
-      font-family: 'TTNormsPro-Medium' !important;
+      font-family: 'soleil', sans-serif !important;
     }
     font-size: 0.95em !important;
 
     &::before {
       margin-left: 0;
-      font-family: 'TTNormsPro-Medium' !important;
+      font-family: 'soleil', sans-serif !important;
     }
   }
 }
