--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -13,6 +13,10 @@
     padding: 15px 20px;
   }
 
+  td {
+    font-weight: 300;
+  }
+
   table {
     min-width: 100%;
     display: table;
@@ -47,17 +51,17 @@
 
       th {
         text-align: center;
-        font-family: 'TTNormsPro-Regular';
+        font-family: 'soleil', sans-serif;
         min-width: 30px;
         padding: 10px;
         font-size: 0.9em;
 
         strong {
-          font-family: 'TTNormsPro-Regular';
+          font-family: 'soleil', sans-serif;
         }
 
         &::before {
-          font-family: 'TTNormsPro-Regular' !important;
+          font-family: 'soleil', sans-serif !important;
         }
       }
     }
@@ -106,9 +110,7 @@
   th {
     padding: 15px;
     display: table-cell;
-    text-align: left;
     vertical-align: middle;
-    text-align: center;
     font-size: 0.8em;
     text-align: center;
     line-height: 1.2;
@@ -145,7 +147,7 @@
         width: -moz-available;
         text-overflow: ellipsis;
         white-space: nowrap;
-        font-family: TTNormsPro-Light;
+        font-family: soleil, sans-serif;
       }
 
       thead {
@@ -158,10 +160,9 @@
 
         th {
           display: block;
-          padding: 10px 5px!important !important;
-          font-family: 'TTNormsPro-Regular';
+          padding: 10px 5px !important;
+          font-family: 'soleil', sans-serif;
           letter-spacing: 0.5px;
-          text-align: center;
           text-align: left;
           text-transform: capitalize;
           font-weight: 500;
@@ -238,7 +239,7 @@
 
   .dataframe thead th {
     text-align: center !important;
-    font-family: 'TTNormsPro-Regular' !important;
+    font-family: 'soleil', sans-serif !important;
   }
 
   .dataframe tbody tr th:only-of-type {
