--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -14,11 +14,10 @@
     width: 100%;
     box-shadow: 0 0 5px rgba(65,67,144,.15);
     background: white;
-    width: auto;
   }
 
   h3 {
-    font-family: 'TTNormsPro-Regular',sans-serif;
+    font-family: 'soleil',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
@@ -187,7 +186,6 @@
       background: #fdfdfd;
       border: 1px solid #f9f9f9;
       position: relative;
-      margin-bottom: 7px;
       height: auto;
       max-width: 97%;
       border-radius: 5px;
@@ -195,14 +193,7 @@
       overflow: hidden;
       display: inline-block;
       height: -webkit-fill-available;
-          margin: 0 5px;
-      /*@media(max-width:1000px) {
-        max-width: 49%;
-      }
-      @media(max-width:600px) {
-        margin: 0 !important;
-        max-width: 24.2% !important;
-      }*/
+      margin: 0 5px;
 
       &:last-child {
         margin-right: 0;
@@ -273,32 +264,17 @@
       @media(max-width: 800px) {
         min-width: auto;
         margin-bottom: 0;
-        /*max-width: 90%;*/
       }
-      /*@media(max-width:600px) {
-        margin: 0 5% 50px!important !important;
-        max-width: 90% !important;
-      }*/
 
       h2 {
         margin-top: 0 !important;
         font-size: 1.38em;
         margin: 0 auto 20px !important;
-        /*border-bottom: 1px solid fade(@theme-color, 40%);*/
         padding-bottom: 0;
         position: relative;
         width: 89%;
-        font-weight: 100;
-        font-family: 'TTNormsPro-Medium',TTNormsPro-Medium;
-        /*  &::after {
-          content: "";
-          width: 90px;
-          height: 1px;
-          background: #26a2c7;
-          position: absolute;
-          left: 0;
-          bottom: -1px;
-        }*/
+        font-family: 'soleil', sans-serif !important;
+        font-weight: 400;
       }
 
       .cards {
@@ -335,7 +311,7 @@
             font-size: .9em;
             line-height: 1.2;
             text-transform: capitalize;
-            font-family: 'TTNormsPro-Regular';
+            font-family: 'soleil', sans-serif !important;
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 97%;
@@ -463,7 +439,8 @@
               span {
                 color: #242d3e;
                 font-size: 11px;
-                font-family: 'TTNormsPro-Regular';
+                font-family: 'soleil', sans-serif !important;
+                font-weight: 300;
                 margin-right: 0;
                 line-height: 1;
                 opacity: .8;
@@ -476,7 +453,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'TTNormsPro-Medium',sans-serif;
+        font-family: 'soleil',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
