--- a/src/less/projects/picker.less
+++ b/src/less/projects/picker.less
@@ -1,11 +1,10 @@
 .page-projects {
   .projectdropdown {
-    margin: 1em auto;
+    margin: -10px auto 1em;
     width: 100%;
     position: relative;
     background: white;
     height: 44px;
-    margin-top: -10px;
     border-top: 1px solid #dbdde7;
     box-shadow: 0 2px 2px #cbccd4;
   }
