--- a/src/less/projects/projects-page.less
+++ b/src/less/projects/projects-page.less
@@ -29,8 +29,12 @@
     margin-bottom: 40px;
   }
 
+  p {
+    font-weight: 300;
+  }
+
   h3 {
-    font-family: 'TTNormsPro-Regular',sans-serif;
+    font-family: 'soleil', sans-serif !important;
     margin-bottom: 0;
     font-size: 1.4em;
   }
