--- a/src/less/series/series.less
+++ b/src/less/series/series.less
@@ -4,7 +4,7 @@
   .postlist {
     @media (max-width: 800px) {
       width: 100%;
-      margin: 0px 0 20px;
+      margin: 0 0 20px;
       padding: 0;
     }
   }
@@ -103,11 +103,11 @@
       }
 
       .sort-title {
-        font-family: 'TTNormsPro-Medium';
+        font-family: 'soleil', sans-serif;
       }
 
       .sort-method {
-        font-family: 'TTNormsPro-Medium';
+        font-family: 'soleil', sans-serif;
       }
     }
   }
@@ -215,7 +215,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','TTNormsPro-Medium',serif;
+          font-family: 'ProductSans-Regular','soleil',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -228,7 +228,7 @@
         }
 
         .postcount {
-          font-family: 'TTNormsPro-Medium',serif;
+          font-family: 'soleil',serif;
           font-size: 1.3em;
         }
       }
@@ -247,7 +247,7 @@
           }
 
           span {
-            font-family: 'TTNormsPro-Medium';
+            font-family: 'soleil', sans-serif;
             white-space: nowrap;
             max-width: 100px;
             text-overflow: ellipsis;
