--- a/tag.hbs
+++ b/tag.hbs
@@ -6,13 +6,13 @@
 			{{! insert sidebar partial}}
 			{{> sidebar}}
 			<!-- start main post area -->
-			<div class=" main-content">
+			<main class=" main-content">
 				{{> cover-tag}}
 				<div class="postlist">
 				{{> loop}}
 				{{pagination}}
 			</div>
-		</div>
+		</main>
 			<!-- end main post area -->
 		</div>
 </section>
