--- a/custom-apply.hbs
+++ b/custom-apply.hbs
@@ -8,12 +8,12 @@
       <!-- start main post area -->
       <div class=" main-content">
         <!-- start post -->
-        <article class="{{page-class}} page">
+        <main class="{{page-class}} page">
           <h1>{{{title}}}</h1>
           {{#if feature_image}}
             <div class="featured-media">
             <picture>
-              <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+              <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
               <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
             </picture>
             </div>
@@ -95,7 +95,7 @@
           </div>
       </div>
   </div>
-  </article>
+</main>
   <!-- end main post area -->
 </section>
 {{/post}}
