--- a/page.hbs
+++ b/page.hbs
@@ -9,12 +9,12 @@
 		<div class="main-content">
 			<!-- start post -->
 			{{#post}}
-				<article class="page">
+				<main class="page">
 					<!-- start responsive image -->
 					{{#if feature_image}}
 						<div class="featured-media">
 							<picture>
-								<source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+								<source media="(min-width: 1200px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
 								<img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
 							</picture>
 						</div>
@@ -27,7 +27,7 @@
 					<div class="post-content">
 						{{content}}
 					</div>
-				</article>
+				</main>
 			{{/post}}
 			<!-- end post -->
 		</div>
