--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -6,13 +6,13 @@
 		.avatar {
 			margin: 0 !important;
 			width: 85px;
-	    height: 85px;
-	    float: none;
+	        height: 85px;
+	        float: none;
 		}
 
 		h3 {
-			font-family: 'TTNormsPro-Regular', serif;
-    	font-size: 1.5em;
+			font-family: 'soleil', serif;
+    	    font-size: 1.5em;
 			margin: 10px;
 		}
 
@@ -21,7 +21,6 @@
 		}
 
 		.bio {
-			margin-top: 15px;
 			font-size: .9em;
 			line-height: 1.5;
 			max-width: 85%;
@@ -96,10 +95,10 @@
 				display: none;
 			}
 			.medium-widget-article__title {
-				    font-family: 'ProductSans-Regular';
-						color: @text-color-heading;
-						font-size: 1.2em;
-						line-height: 1.2;
+				    font-family: 'ProductSans-Regular', sans-serif;
+					color: @text-color-heading;
+					font-size: 1.2em;
+					line-height: 1.2;
 			}
 
 			.medium-widget-article__image img {
@@ -140,7 +139,7 @@
 
 					.name {
 						font-size: 1.2em;
-						font-family: 'TTNormsPro-Medium', '', sans-serif;
+						font-family: 'soleil', sans-serif;
 					}
 
 					.country,
@@ -174,7 +173,6 @@
 							.eventimg {
 								display: inline-block;
 								margin-right: 15px;
-								height: auto;
 								width: 60px;
 								height: 60px;
 								min-width: 60px;
@@ -228,7 +226,7 @@
 									line-height: 1.1;
 									width: 100%;
 									height: 14px;
-									font-family: 'TTNormsPro-Medium';
+									font-family: 'soleil', sans-serif;
 									margin-top: 3px;
 								}
 							}
@@ -239,7 +237,7 @@
 								display: inline-block!important;
 								line-height: 1.4;
 								padding-top: 5px;
-								font-family: 'TTNormsPro-Medium',sans-serif;
+								font-family: 'soleil', sans-serif;
 							}
 						}
 
@@ -247,8 +245,6 @@
 							display: inline-block;
 							overflow: hidden;
 							width: 100%;
-
-							.eventhost {}
 
 							i {
 								margin-right: 5px;
@@ -302,7 +298,7 @@
 			display: block;
 			white-space: nowrap;
 			font-size: 15px;
-			font-family: 'TTNormsPro-Medium', '', sans-serif;
+			font-family: 'soleil', sans-serif;
 		}
 
 		i {
