--- a/src/less/global/fonts.less
+++ b/src/less/global/fonts.less
@@ -1,9 +1,34 @@
-@import (css) url("//hello.myfonts.net/count/38ec83?css");
+@import (css) url("https://use.typekit.net/otx2yqz.css");
 
-@font-face {font-family: 'TTNormsPro-Bold';src: url('../../../assets/fonts/38EC83_0_0.eot');src: url('../../../assets/fonts/38EC83_0_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38EC83_0_0.woff2') format('woff2'),url('../../../assets/fonts/38EC83_0_0.woff') format('woff'),url('../../../assets/fonts/38EC83_0_0.ttf') format('truetype');}
-@font-face {font-family: 'TTNormsPro-Light';src: url('../../../assets/fonts/38EC83_1_0.eot');src: url('../../../assets/fonts/38EC83_1_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38EC83_1_0.woff2') format('woff2'),url('../../../assets/fonts/38EC83_1_0.woff') format('woff'),url('../../../assets/fonts/38EC83_1_0.ttf') format('truetype');}
-@font-face {font-family: 'TTNormsPro-Regular';src: url('../../../assets/fonts/38EC83_2_0.eot');src: url('../../../assets/fonts/38EC83_2_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38EC83_2_0.woff2') format('woff2'),url('../../../assets/fonts/38EC83_2_0.woff') format('woff'),url('../../../assets/fonts/38EC83_2_0.ttf') format('truetype');}
-@font-face {font-family: 'TTNormsPro-Medium';src: url('../../../assets/fonts/38EC83_3_0.eot');src: url('../../../assets/fonts/38EC83_3_0.eot?#iefix') format('embedded-opentype'),url('../../../assets/fonts/38EC83_3_0.woff2') format('woff2'),url('../../../assets/fonts/38EC83_3_0.woff') format('woff'),url('../../../assets/fonts/38EC83_3_0.ttf') format('truetype');}
+@font-face {
+  font-family: soleil,sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'soleil',sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: soleil, sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'soleil', sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'soleil', sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
 
 /* latin */
 @font-face {
