--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -13,15 +13,14 @@
 	.footer-title {
 		color: #fff;
 		font-weight: 800;
-		margin: 0;
 		font-size: 1.1em;
 		text-shadow: -1px 1px 1px #133e6d;
-		font-family: 'ProductSans-Regular';
+		font-family: 'ProductSans-Regular', sans-serif;
 		text-align: left;
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		line-height: 1;
-		margin-bottom: 25px;
+		margin: 0 0 25px;
 		@media(max-width: 800px) {
 			margin: 10px 0 10px !important;
 		}
@@ -62,7 +61,7 @@
 				display: block;
 				text-align: left;
 				transition: all 0.3s ease-out;
-				font-family: 'TTNormsPro-Light';
+				font-family: 'soleil', sans-serif;
 				font-size: 0.93em;
 				margin-bottom: 2px;
 
@@ -75,7 +74,8 @@
 
 				a {
 					color: #fff;
-					font-family: 'TTNormsPro-Light';
+					font-family: 'soleil', sans-serif;
+					font-weight: 300;
 				}
 			}
 		}
@@ -132,7 +132,7 @@
 	.description {
 		color: white;
 		width: 100%;
-		font-family: 'TTNormsPro-Light';
+		font-family: 'soleil', sans-serif;
 		font-weight: 100;
 		font-size: 0.95em;
 		line-height: 1.6;
@@ -190,7 +190,6 @@
 			}
 
 			a {
-				font-size: 1em;
 				font-weight: 100;
 				font-size: 1.4em;
 				margin: 0;
@@ -234,6 +233,6 @@
 		text-align: center;
 		color: white;
 		font-size: 0.85em;
-		font-family: 'TTNormsPro-Light';
+		font-family: 'soleil', sans-serif;
 		padding: 15px 0;
 	}
