--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -57,7 +57,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'TTNormsPro-Regular',sans-serif !important;
+			font-family: 'soleil',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -71,7 +71,7 @@
 			}
 
 			a {
-				font-family: 'TTNormsPro-Medium',sans-serif !important;
+				font-family: 'soleil',sans-serif !important;
 			}
 
 			* {
@@ -115,7 +115,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'TTNormsPro-Medium';
+			font-family: 'ProductSans-Bold', 'soleil', sans-serif;
 
 			@media(max-width: 950px) {
 				 font-size: 1.8em;
@@ -131,13 +131,13 @@
 			a {
 				color: @text-color-heading;
 				transition: all 0.2s ease-out;
-				font-family: 'ProductSans-Medium','',sans-serif;
+				font-family: 'ProductSans-Medium', sans-serif;
 
 				&:hover {
 					color: @secondary-color;
 				}
 				@media(max-width: 600px) {
-					font-family: 'ProductSans-Bold', 'TTNormsPro-Medium';
+					font-family: 'ProductSans-Bold', 'soleil', sans-serif;
 					font-weight: 500;
 				}
 			}
@@ -150,7 +150,7 @@
 			text-align: left;
 			font-size: 1.2em;
 			color: #153b52;
-			font-family: 'TTNormsPro-Medium',sans-serif;
+			font-family: 'ProductSans-Regular', sans-serif;
 			@media(max-width: 600px) {
 				font-size: 1.05em !important;
 				-webkit-line-clamp: 2;
@@ -198,7 +198,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'TTNormsPro-Regular', sans-serif;
+		font-family: 'soleil', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 420px;
@@ -214,7 +214,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'TTNormsPro-Medium','TTNormsPro-Medium', 'sans-serif';
+			font-family: 'soleil','soleil', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -237,12 +237,12 @@
 
 				.mobile-name {
 					margin-bottom: 2px;
-					font-family: 'TTNormsPro-Medium', sans-serif;
+					font-family: 'soleil', sans-serif;
 					letter-spacing: .2px;
 				}
 
 				.mobile-date {
-					font-family: 'TTNormsPro-Regular';
+					font-family: 'soleil';
 					font-size: 0.9em;
 				}
 			}
@@ -251,7 +251,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'TTNormsPro-Regular';
+				font-family: 'soleil';
 				color: @meta-color;
 			}
 			@media (max-width: 800px) {
@@ -261,7 +261,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'TTNormsPro-Regular','TTNormsPro-Medium';
+			font-family: 'soleil','soleil';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -292,7 +292,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 13px;
-					font-family: 'TTNormsPro-Medium','TTNormsPro-Medium';
+					font-family: 'soleil','soleil';
 
 					@media(max-width: 600px) {
 						font-size: 13px;
@@ -342,7 +342,7 @@
 				}
 
 				span {
-					font-family: 'TTNormsPro-Regular', sans-serif;
+					font-family: 'soleil', sans-serif;
 					color: @meta-color;
 					line-height: 1;
 					overflow: hidden;
@@ -368,7 +368,7 @@
 
 			&.date {
 				span {
-					font-family: 'TTNormsPro-Regular', sans-serif;
+					font-family: 'soleil', sans-serif;
 					color: @meta-color !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -434,7 +434,7 @@
 				padding: 13px 18px;
 				font-size: 14px;
 				height: fit-content;
-				font-family: 'TTNormsPro-Medium',serif;
+				font-family: 'soleil',serif;
 			}
 		}
 	}
