--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -46,19 +46,18 @@
 		@media(max-width: 600px) {
 			width: 93%;
 			margin: 0 auto;
-			text-align: 14px;
 			font-size: 0.95em;
 			line-height: 1.6;
 		}
 	}
 
 	.post-excerpt {
-		font-family: 'TTNormsPro-Medium';
+		font-family: 'soleil', sans-serif;
 	}
 
 	h3 {
 		margin-bottom: 10px;
-		font-family: 'TTNormsPro-Medium',serif;
+		font-family: 'soleil', sans-serif;
 
 		@media(max-width: 600px) {
 			    margin: 5px 10px;
@@ -66,7 +65,7 @@
 	}
 
 	.meta-info {
-		font-family: 'TTNormsPro-Regular',sans-serif;
+		font-family: 'soleil', sans-serif;
 		font-size: 0.9em;
 		display: flex;
 		justify-content: space-around;
