--- a/src/less/pages/customtemplates.less
+++ b/src/less/pages/customtemplates.less
@@ -8,7 +8,7 @@
   .tag-name {
     font-size: 1.3em;
     margin-top: 0;
-    font-family: 'TTNormsPro-Regular';
+    font-family: 'soleil', sans-serif;
 
     i {
       font-size: 0.8em;
