--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -17,7 +17,7 @@
     .tag-name {
       font-size: 2.2em;
       color: white !important;
-      font-family: 'TTNormsPro-Regular';
+      font-family: 'soleil', sans-serif;
       text-shadow: 0 0 20px #2f2d56;
       margin-top: 90px;
     }
@@ -28,7 +28,7 @@
       max-width: 90%;
       margin: 20px auto 0;
       color: white;
-      font-family: TTNormsPro-Regular;
+      font-family: soleil, sans-serif;
       text-shadow: 2px 2px 0 #15133c, 2px 2px 10px #15133c;
       font-size: 1.2em;
     }
@@ -77,6 +77,7 @@
       .post-head {
         margin: 0;
         min-height: 140px;
+        padding: 5px 5px 0;
 
         @media(max-width: 600px) {
           margin: 0 0 80px;
@@ -106,7 +107,7 @@
         min-height: 80px;
         margin-bottom: 55px;
         overflow: hidden;
-        font-family: 'TTNormsPro-Regular';
+        font-family: 'soleil', sans-serif;
         font-size: 1em !important;
         text-overflow: ellipsis;
         font-weight: 600;
@@ -134,7 +135,7 @@
         .btn {
           padding: 12px 20px;
           font-size: 16px;
-          font-family: TTNormsPro-Regular,sans-serif;
+          font-family: soleil,sans-serif;
 
           a {
             line-height: 1;
@@ -336,7 +337,7 @@
         color: #162c52;
         width: auto;
         display: block;
-        align-items: left;
+        text-align: left;
         min-height: 159px;
 
         @media(max-width: 600px){
@@ -345,7 +346,7 @@
 
         h2 {
           color: #3f4856;
-          font-family: 'ProductSans-Regular';
+          font-family: 'ProductSans-Regular', sans-serif;
           margin-bottom: 7px;
           margin-top: 0;
           font-size: 1.3em;
@@ -359,7 +360,7 @@
           margin: 5px 0;
           line-height: 1.5;
           text-align: left;
-          font-family: 'TTNormsPro-Regular';
+          font-family: 'soleil', sans-serif;
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
@@ -378,7 +379,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.9em;
-          font-family: 'TTNormsPro-Medium';
+          font-family: 'soleil', sans-serif;
         }
       }
     }
