--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -74,7 +74,7 @@
     font-size: 1.5em;
     margin-bottom: 0;
     line-height: 1;
-    font-family: 'TTNormsPro-Medium';
+    font-family: 'soleil', sans-serif;
     @media(max-width: 600px) {
       font-size: 1.3em;
     }
@@ -113,7 +113,7 @@
   justify-content: left !important;
 
   .name {
-    font-family: 'TTNormsPro-Medium';
+    font-family: 'soleil', sans-serif;
     color: #5D6178;
     font-size: .9em;
     font-weight: 600;
