--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -30,10 +30,9 @@
 			color: #5b6a80;
 			font-size: 0.8em;
 			margin-right: 15px;
-			transition: all 0.3s;
 			line-height: 1;
 			padding: 8px 10px;
-			font-family: 'TTNormsPro-Regular';
+			font-family: 'soleil', sans-serif;
 			border-radius: 2px;
 			transition: all 0.3s ease-out;
 			@media(max-width:800px) {
@@ -79,7 +78,6 @@
 				border-radius: 2px;
 				background: #ffffff;
 				color: #dbdbdb;
-				list-style: none;
 				transition: 0.2s all ease-out;
 				border: 1px solid #dbdbdb;
 				padding: 0;
@@ -209,19 +207,18 @@
 section .widget.newsletter {
 	display: none;
 	padding: 20px;
-  box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
+  	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 
 	@media(max-width: 600px) {
 		display:block;
 		background: white;
-		margin: 0;
 		width: -webkit-fill-available;
-	  width: -moz-fill-available;
-		    margin: 5px 20px;
+	  	width: -moz-fill-available;
+		margin: 5px 20px;
 
 		h4 {
 			margin:0;
-			font-family: 'ProductSans-Regular';
+			font-family: 'ProductSans-Regular', sans-serif;
 			font-weight: 100;
 		}
 
@@ -229,7 +226,7 @@ section .widget.newsletter {
 			margin: 5px 0 15px;
 			line-height: 1.5;
 			font-size: .8em !important;
-			font-family: 'TTNormsPro-Regular', sans-serif;
+			font-family: 'soleil', sans-serif;
 		}
 
 		.form-group {
@@ -288,28 +285,23 @@ section .widget.newsletter {
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
-			font-family: 'TTNormsPro-Medium',sans-serif;
+			font-family: 'soleil',sans-serif;
 		}
 	}
 
 	input[type="text"],
 	input[type="email"] {
-		font-weight: 100;
 		border: 1px solid #d5dbe6 !important;
-		transition: all 0.3s all;
 		width: -webkit-fill-available;
 		width: -moz-fill-available;
-		margin-bottom: 0;
 		padding: 13px;
-		border: 0;
 		border-radius: 3px;
 		background: #fff;
 		font-size: 12px;
-		font-weight: 200;
+		font-weight: 300;
 		letter-spacing: 1px;
-		font-weight: 100;
 		border: 1px solid #d5dbe6;
-		transition: all 0.3s all;
+		transition: all 0.3s ease-out;
 		margin-bottom: 10px;
 
 		&::placeholder {
