--- a/src/less/projects/repos.less
+++ b/src/less/projects/repos.less
@@ -17,7 +17,7 @@
 }
 
 .repo-title {
-  font-family: 'TTNormsPro-Medium',serif;
+  font-family: 'soleil', sans-serif;
   font-size: 18px !important;
 
   &:hover {
@@ -53,6 +53,7 @@
     color: @color-github;
     font-size: 18px !important;
     line-height: 1;
+    font-weight: 400;
 
     &:hover {
       color: white;
