--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -7,6 +7,15 @@
 	margin-bottom: 40px;
 	background: white;
 	transition: all 0.3s ease-out;
+
+	&:hover {
+		margin-top:-10px;
+		margin-bottom: 50px;
+		box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3);
+		cursor: pointer;
+	}
+
+
 	@media(max-width: 950px) {
 		 padding: 15px;
 		 margin-bottom: 20px;
