shadows added to inline code, postpreview hovers

--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -11,7 +11,7 @@
   .endpoint,
   .shell,
   .hljs {
-    background: @nord0;
+    background: #232934;
     color: white;
     font-weight: normal;
 
