--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -227,7 +227,7 @@ nav {
 
 	p {
 		margin: 0 0 25px;
-		font-size: 1em;
+		font-size: 1.05em;
 		line-height: 1.8em;
 
 		@media (max-width: 600px) {
@@ -258,7 +258,7 @@ article {
 	box-shadow: 0 0 5px rgba(80, 82, 204, 0.1) !important;
 
 	header {
-		padding: 10px 0;
+		padding: 10px 0 15px;
 		margin: 0;
 		box-shadow: unset !important;
 
@@ -634,9 +634,9 @@ article {
 
 		* {
 			font-family: 'soleil',sans-serif;
-			font-weight: 500;
+			font-weight: 300;
 			line-height: 1.6;
-			font-size: 0.96em;
+			font-size: 1.05em;
 			font-style: normal;
 		}
 
