--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -5,7 +5,14 @@
   width: 32%;
   transition: all 0.3s ease-out;
   position: relative;
-  box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
+  box-shadow: 0 0 5px rgba(80,82,204,.1) !important;
+
+  &:hover {
+    margin-top:-5px;
+    margin-bottom: 5px;
+    box-shadow: 0 20px 20px rgba(65, 67, 144, 0.3) !important;
+    cursor: pointer;
+  }
 
   @media(max-width: 600px) {
     margin: 5px 20px;
