--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -69,6 +69,7 @@ blockquote pre {
     overflow-y: visible;
     width: fit-content;
     background: rgba(183, 192, 237, 0.18);
+    box-shadow: -1px 1px 2px #1d48785e, 0 0 1px #1d48784d;
     color: #3297b5;
     padding: 3px 5px;
     border-radius: 2px;
@@ -81,7 +82,7 @@ blockquote pre {
   code {
     margin: 0;
     height: 100%;
-    font-size: 0.75em;
+    font-size: 0.8em;
     padding: 4px 5px;
   }
 
